<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/rlFormulario"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nombre_completo"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColorHint="@color/colorInput" />

        <EditText
            android:id="@+id/editTextBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPersonName"
            android:hint="@string/fecha_nacimiento"
            android:singleLine="true"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:inputType="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColorHint="@color/colorInput"
            android:layout_marginTop="@dimen/top"/>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColorHint="@color/colorInput"
            android:layout_below="@+id/editTextBirthDate"
            android:layout_marginTop="@dimen/top" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColorHint="@color/colorInput"
            android:layout_below="@+id/editTextPhone"
            android:layout_marginTop="@dimen/top" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/descripcion_contacto"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColorHint="@color/colorInput"
            android:layout_below="@+id/editTextEmail"
            android:layout_marginTop="@dimen/top" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextDescription"
                android:text="@string/siguiente" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>